--- a/YusupovHotel/Pages/ClientsPage.razor
+++ b/YusupovHotel/Pages/ClientsPage.razor
@@ -143,8 +143,7 @@
     }
 
     #newClient {
-        position: absolute;
-        margin-left: 15%;
+        margin-left: 250px;
         margin-top: -1px;
     }
 
@@ -152,7 +151,9 @@
         width: 250px;
         height: 35px;
         padding-left: 24px;
+        
     }
+    
 
     #searching ~ i {
         width: 35px;
