--- a/YusupovHotel/Pages/_Host.cshtml
+++ b/YusupovHotel/Pages/_Host.cshtml
@@ -16,3 +16,4 @@
 <script src="~/js/myJs.js"></script>
 <script src="~/js/lightbox-plus-jquery.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="~/_content/BlazorInputFile/inputfile.js"></script>
