--- a/YusupovHotel/Pages/EmployeeProfilePage.razor
+++ b/YusupovHotel/Pages/EmployeeProfilePage.razor
@@ -3,7 +3,126 @@
 <PageTitle>Profile</PageTitle>
 
 
+<label for="from">From</label>
+<input type="text" id="from" name="from">
+<label for="to">to</label>
+<input type="text" id="to" name="to">
+@code{
+    string nameClient = "";
+    List<Client> clients = new List<Client>();
+    List<Client> sortingClients = new List<Client>();
+
+    protected override void OnInitialized()
+    {
+        clients = Mongo.FindAllClient();
+        sortingClients = clients;
+    }
+
+    private void Searching()
+    {
+        sortingClients = clients.Where((element) =>
+            element.ClientName.ToLower().Contains(nameClient.ToLower()))
+        .ToList();
+    }
+
+    private void GetCleint(Client client)
+    {
+        nameClient = client.ClientName;
+    }
+
+
+}
+
 <style>
+
+    #span {
+        /*margin-top: -30px;*/
+    }
+
+  #inputBox {
+        position: relative;
+        margin-top: -40px;
+    }
+
+    #inputBox input {
+        background-color: transparent;
+        border: 0;
+        border-bottom: 1px solid #ced4da;
+        border-radius: 0;
+        outline: none;
+        color: black;
+        font-size: 14px;
+        margin-left: 2.6rem;
+        height: 30px;
+        width: 400px;
+    }
+
+    #inputBox span, .typeList span {
+        position: absolute;
+        left: 45px;
+        padding: 4px;
+        pointer-events: none;
+        font-size: 0.8em;
+        color: gray;
+        text-transform: uppercase;
+        transition: 0.5s;
+    }
+
+    .typeList select:active {
+        border-color: #ced4da;
+        outline: none;
+    }
+
+    .typeList select:valid ~ #span,
+    .typeList select:focus ~ #span,
+    #inputBox input:valid ~ #span,
+    #inputBox input:focus ~ #span {
+        color: grey;
+        transform: translateX(-1px) translateY(-15px);
+        font-size: 0.6em;
+        background: none;
+        letter-spacing: 0.2em;
+    }
+
+/* Поле поиска, когда он получает фокус/нажал на */
+
+/* Контейнер div - необходим для размещения выпадающего содержимого */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Выпадающее содержимое (скрыто по умолчанию) */
+.dropdown-content {
+  position: absolute;
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+/* Ссылки внутри выпадающего списка */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Изменение цвета выпадающих ссылок при наведении курсора */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .custom-btn {
     width: 130px;
