--- a/YusupovHotel/Pages/RoomsPage.razor
+++ b/YusupovHotel/Pages/RoomsPage.razor
@@ -5,8 +5,6 @@
 @inject NavigationManager manager
 @inject SingletonServise servise
 @inject IWebHostEnvironment Environment
-@using System.IO;
-
 
 <section>
     <div class="modal fade" id="modalRegisterForm" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -24,68 +22,80 @@
                 <div class="md-form mb-5">
                         <iconify-icon icon="tabler:number"></iconify-icon>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" required="required" @bind-value="number" type="text" />
+                        <InputNumber TValue="int?" class="fas fa-envelope prefix grey-text" required="required" @bind-Value="roomModel.Number" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
                         <span id="span">Номер комнаты</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Number" /></span>
                     </div>
                 </div>
                 <div class="md-form mb-5">
                         <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
                         <div class="typeList" >
-                        <select @bind=type required="required"
+                        <InputSelect @bind-Value="@roomModel.Type" required="required"
                             class="dropdown" style="outline:none; outline-style:none">
+                            <option selected disabled></option>
                             <option value="Стандарт">Стандарт</option>
                             <option value="Бизнес">Бизнес</option>
                             <option value="Люкс одноместный">Люкс одноместный</option>
                             <option value="Люкс однокомнатный">Люкс двухкомнатный</option>
                             <option value="Люкс премиум">Люкс премиум</option>
-                        </select>
+                        </InputSelect>
                         <span id="span">Тип номера</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Type" /></span>
                     </div>
                 </div>
                 <div class="md-form mb-5">
                     <iconify-icon icon="pepicons-pop:persons"></iconify-icon>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" type="text" required="required" @bind-value="capacity" data-mask="+7(000)-000-00-00" />
+                        <InputNumber TValue="int?" class="fas fa-envelope prefix grey-text" required="required" @bind-Value="roomModel.Capacity" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
                         <span id="span">Вместимость</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Capacity" /></span>
                     </div>
                 </div>
                 <div class="md-form mb-5">
                         <iconify-icon icon="bx:area"></iconify-icon>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" type="text" required="required" @bind-value="area" data-mask="+7(000)-000-00-00" />
+                        <InputNumber TValue="double?" class="fas fa-envelope prefix grey-text" required="required" prefix="" @bind-Value="roomModel.Area"  />
                         <span id="span">Площадь</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Area" /></span>
                     </div>
                 </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="ic:twotone-price-check"></iconify-icon>
                         <div id="inputBox">
-                            <input class="fas fa-envelope prefix grey-text" type="text" required="required" @bind-value="cost" data-mask="+7(000)-000-00-00" />
+                            <InputNumber TValue="double?" class="fas fa-envelope prefix grey-text" required="required" prefix="" @bind-Value="roomModel.Cost" />
                             <span id="span">Цены за ночь</span>
+                            <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Cost" /></span>
                         </div>
                     </div>
                     <div class="md-form mb-5">
                         <iconify-icon icon="mdi:text-box"></iconify-icon>
                         <div id="inputBox">
                             <div class="description">
-                                <textarea class="fas fa-envelope prefix grey-text" style="font-size: 14px;" type="text" @bind="description" required="required" rows="4" />
+                                <InputTextArea class="fas fa-envelope prefix grey-text" style="font-size: 14px;" type="text" @bind-Value="roomModel.Description" required="required" rows="4" />
                                 <span id="span" style="margin-top: -105px; background-color: white">Описание</span>
                             </div>
                         </div>
                     </div>
                     <div class="md-form mb-5">
-                        <BlazorInputFile.InputFile OnChange="@LoadFiles" class="form-control" multiple accept=".png,.jpg,.jpeg" />
-                        <div style="display:flex; align-content:center;" >
-                            @if (imgSrc.Count > 0)
+                        <iconify-icon icon="material-symbols:image-search-rounded" style="top:-14px"></iconify-icon>
+                        <BlazorInputFile.InputFile OnChange="@LoadFiles" id="inputimage" class="form-control" multiple accept=".png,.jpg,.jpeg" />
+                            @if (inputFileError != "")
                             {
-                                <img src="@imgSrc[0]" class="fit-picture" height="140" width="145" style="padding:10px"/>
-                                <img src="@imgSrc[1]" class="fit-picture" height="140" width="145" style="padding:10px" />
-                                <img src="@imgSrc[2]" class="fit-picture" height="140" width="145" style="padding:10px" />
+                                <span style="margin-top: -4px; margin-left: 50px; color: red; font-size: 0.8em; text-transform: uppercase;">@inputFileError</span>
                             }
-                        </div>
+                            else if(imgSrc.Count == 3)
+                            {
+                                <div style="display:flex; align-content:center; padding: 10px;" >
+                                    <img src="@imgSrc[0]" class="fit-picture" height="140" width="145" style="padding:10px"/>
+                                    <img src="@imgSrc[1]" class="fit-picture" height="140" width="145" style="padding:10px" />
+                                    <img src="@imgSrc[2]" class="fit-picture" height="140" width="145" style="padding:10px" />
+                                </div>
+                            }
+                        
                     </div>
             </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default btn-success" type="submit" @onclick=AddNewRoom>Добавить</button>
+                <button class="btn btn-default btn-success" type="submit" >Добавить</button>
             </div>
                 </EditForm>
         </div>
@@ -119,32 +129,26 @@
 @code
 {
     List<Room> rooms = new List<Room>();
-    Room roomModel = new Room(0,"",0,0,0,"");
+    Room roomModel = new Room();
     bool wasSubmitted;
-    string number = "";
-    string type = "";
-    string capacity = "";
-    string area = "";
-    string cost = "";
-    string description = "";
     List<string> imgSrc = new List<string>();
     IFileListEntry file = null;
     List<byte[]> fileBytes = new List<byte[]>();
-
+    string inputFileError = "";
 
     protected override async void OnInitialized()
     {
         rooms = Mongo.GetAllRooms();
         foreach (var room in rooms)
         {
-            FileSystemService.GetRoomPhotos(room);
+            FileSystemService.GetRoomWithPhotos(room);
         }
     }
 
     private void AddNewRoom()
     {
-        Room newRoom = new Room(int.Parse(number), type, int.Parse(capacity), Double.Parse(area), int.Parse(cost), description);
-        FileSystemService.SaveRoomPhotos(fileBytes, newRoom);
+        rooms.Add(FileSystemService.SaveRoomWithPhotos(fileBytes, roomModel));
+        
     }
 
     public void Submit()
@@ -161,10 +165,12 @@
 
     private async Task LoadFiles(IFileListEntry[] files)
     {
+        double s = 1.3;
         imgSrc.Clear();
         fileBytes.Clear();
-        if(files.Count() > 0 )
+        if (files.Count() == 3)
         {
+            inputFileError = "";
             for (int i = 0; i < files.Count(); i++)
             {
                 file = files[i];
@@ -177,6 +183,9 @@
                 }
             }
         }
+        else if (files.Count() > 3) inputFileError = "Можно загрузить только 3 фото";
+        else inputFileError = "Нужно загрузить 3 фото";
+
     }
 }
 
@@ -336,11 +345,20 @@
 
     #inputBox {
         position: relative;
-        margin-top: -33px;
+        margin-top: -40px;
     }
 
     #span {
         margin-top: -30px;
+    }
+
+    #inputimage {
+        position: relative;
+        margin-top: -55px;
+        outline: none;
+        margin-left: 2.6rem;
+        height: 37px;
+        width: 400px;
     }
 
     #inputBox input {
@@ -352,7 +370,7 @@
         color: black;
         font-size: 14px;
         margin-left: 2.6rem;
-        height: 30px;
+        height: 37px;
         width: 400px;
     }
 
@@ -395,6 +413,7 @@
         position: relative;
         transition: color .2s;
         font-size: 2.1rem;
+        top: 5px;
     }
 
     .sr-only {
@@ -416,14 +435,5 @@
   border-radius: 10px;
   cursor : pointer;   
 }
-
-
-
-
-
-
-
-
-   
 
 </style>
