--- a/YusupovHotel/Pages/AllBookingPage.razor
+++ b/YusupovHotel/Pages/AllBookingPage.razor
@@ -15,8 +15,35 @@
                     </button>
                 </div>
                     <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="material-symbols:person"></iconify-icon>
+                        <div id="inputBox" class="inputBoxClients">
+                            <input class="fas fa-envelope prefix grey-text" type="text" @bind="nameClient" @bind:event="oninput" @onkeyup="SearchingForSelect" required="required">
+                            <span id="span">Клиент</span>
+                            <div class="dropdownClients">
+                                @foreach (var client in sortingClients)
+                                {
+                                    <a @onclick="() => SelectCleint(client)">@client.ClientName</a>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="pepicons-pop:persons"></iconify-icon>
+                        <div id="inputBox">
+                            <input @bind=adaltCnt type="text" class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                            <span id="span">Кол-во взрослых</span>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="pepicons-pop:persons" ></iconify-icon>
+                        <div id="inputBox">
+                            <input @bind=childeCnt type="text" class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                            <span id="span">Кол-во детей</span>
+                        </div>
+                    </div>
                         <div class="md-form mb-5">
-                            <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
+                        <iconify-icon icon="icon-park-twotone:hotel-please-clean" style="top: 7px;"></iconify-icon>
                             <div class="typeList" >
                             <select @bind="roomType" @onclick="GetRoomWithSelectType" required="required"
                                 class="dropdown" style="outline:none; outline-style:none">
@@ -31,7 +58,21 @@
                             </div>
                         </div>
                     <div class="md-form mb-5">
-                            <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
+                        <iconify-icon icon="ic:baseline-calendar-month"></iconify-icon>
+                        <div id="inputBox">
+                            <input name="date" id="from" @bind="chekInDate" @onclick="JsInvoce" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+                            <span id="span">Дата заезда</span>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="ic:baseline-calendar-month"></iconify-icon>
+                        <div id="inputBox">
+                            <input name="date" id="to" @bind="chekOutDate" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
+                            <span id="span">Дата выезда</span>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="tabler:number" style="top:9px"></iconify-icon>
                             <div class="typeList" >
                             <select @bind="roomNumber" required="required"
                                 class="dropdown" style="outline:none; outline-style:none">
@@ -41,71 +82,36 @@
                                     <option value="@room.Number">@room.Number</option>
                                 }
                                 </select>
-                                <span id="span">Тип номера</span>
+                                <span id="span">Номер</span>
                             </div>
                         </div>
-                        <div class="md-form mb-5">
-                            <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
-                        <div id="inputBox" class="inputBoxClients">
-                            <input class="fas fa-envelope prefix grey-text" type="text" @bind="nameClient" @bind:event="oninput" @onkeyup="Searching" required="required">
-                            <span id="span">Клиент</span>
-                            <div class="dropdownClients">
-                                @foreach (var client in sortingClients)
-                                {
-                                    <a @onclick="() => SelectCleint(client)">@client.ClientName</a>
-                                }
-                            </div>
-                            </div>
-                        </div>
-                    <div class="md-form mb-5">
-                        <iconify-icon icon="tabler:number"></iconify-icon>
-                        <div id="inputBox">
-                            <input name="date" @bind="chekInDate" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
-                            <span id="span">Дата заезда</span>
-                        </div>
-                    </div>
-                    <div class="md-form mb-5">
-                        <iconify-icon icon="tabler:number"></iconify-icon>
-                        <div id="inputBox">
-                            <input name="date" @bind="chekOutDate" type="text" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
-                            <span id="span">Дата выезда</span>
-                        </div>
-                    </div>
-                    <div class="md-form mb-5">
-                        <iconify-icon icon="tabler:number"></iconify-icon>
-                        <div id="inputBox">
-                            <input @bind=adaltCnt class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
-                            <span id="span">Кол-во взрослых</span>
-                        </div>
-                    </div><div class="md-form mb-5">
-                        <iconify-icon icon="tabler:number"></iconify-icon>
-                        <div id="inputBox">
-                            <input @bind=childeCnt class="fas fa-envelope prefix grey-text" required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
-                            <span id="span">Кол-во детей</span>
-                        </div>
-                    </div>
                     </div>
                     <div class="modal-footer d-flex justify-content-center">
-                        <button class="btn btn-default btn-success" type="button" @onclick="AddNewBook">Добавить</button>
+                    <button class="btn btn-default btn-success" type="submit" data-bs-dismiss="modal" @onclick="Submit">Добавить</button>
                     </div>
             </div>
         </div>
         </div>
-    <button id="newClient" class="btn btn-default btn-success" @onclick=" () => NewBooking()" data-bs-toggle="modal" data-bs-target="#modalRegisterForm">
-        Забронировать
-    </button><table class="table">
+    <div class="appbar" style="margin: 20px 0 0 10%">
+        <input id="searching" class="sort" type="text" @bind="search" @bind:event="oninput" @onkeyup="SearchingForBook" required="required" placeholder="Поиск">
+        <i id="searching" class="fas fa-search prefix grey-text"></i>
+        <button id="newBook"  class="btn btn-default btn-success" @onclick=" () => NewBooking()" data-bs-toggle="modal" data-bs-target="#modalRegisterForm">
+            Забронировать
+        </button>
+    </div>
+    <table class="table" style="width: 80%; margin: 40px 10%;">
         <thead>
             <tr>
                 <th>Номер комнаты</th>
                 <th>Клиент</th>
                 <th>Дата заезда</th>
                 <th>Дата выезда</th>
-                <th>Сумма проживания</th>
+                <th>Сумма проживания, р</th>
                 <th>Изменить</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var book in sortingBooking)
+            @foreach (var book in sortingBookings)
             {
                 <tr>
                     <td>@book.Room.Number</td>
@@ -114,7 +120,7 @@
                     <td>@book.DepartureDate</td>
                     <td>@book.TotalPrice</td>
                     <td>
-                        <button type="button" class="btn btn-info" @*@onclick="() => NewBooking(book)"*@>Change</button>
+                        <button class="button" style="vertical-align:middle" @onclick="() => OpenCurrentBooking(book)"><span>Изменить </span></button>
                     </td>
                 </tr>
             }
@@ -123,19 +129,20 @@
 </section>
 
 @code {
-    List<Booking> booking = new List<Booking>();
-    List<Booking> sortingBooking = new List<Booking>();
+    List<Booking> bookings = new List<Booking>();
+    List<Booking> sortingBookings = new List<Booking>();
     List<Room> rooms = new List<Room>();
     List<Room> sortingRooms = new List<Room>();
     List<Client> clients = new List<Client>();
     List<Client> sortingClients = new List<Client>();
     Booking bookModel = new Booking();
+    string search = "";
     string nameClient = "";
-    string chekInDate;
-    string chekOutDate;
+    string chekInDate = "";
+    string chekOutDate = "";
     Client client;
-    int adaltCnt;
-    int childeCnt;
+    string adaltCnt = "";
+    string childeCnt = "";
     //string nameClient = "";
     //string nameClient = "";
     string roomNumber;
@@ -146,17 +153,23 @@
     protected override void OnInitialized()
     {
         js.InvokeVoidAsync("ChangePanelsState");
-        booking = Mongo.FindAllBooking();
-        sortingBooking = booking;
+        bookings = Mongo.FindAllBooking();
+        sortingBookings = bookings;
         clients = Mongo.FindAllClient();
         sortingClients = clients;
         rooms = Mongo.GetAllRooms();
         sortingRooms = rooms;
     }
 
+    private void JsInvoce()
+    {
+        js.InvokeVoidAsync("date");
+    }
+
     public void Submit()
     {
         wasSubmitted = true;
+        AddNewBook();
     }
 
     private void NewBooking()
@@ -171,14 +184,24 @@
         int year = int.Parse(chekInDate.Split('-')[0]);
         int mounth = int.Parse(chekInDate.Split('-')[1]);
         int day = int.Parse(chekInDate.Split('-')[2]);
-        var arrivalDate = new DateTime(year, mounth, day);
+        var arrivalDate = new DateOnly(year, mounth, day);
         int year1 = int.Parse(chekOutDate.Split('-')[0]);
         int mounth1 = int.Parse(chekOutDate.Split('-')[1]);
         int day1 = int.Parse(chekOutDate.Split('-')[2]);
-        var departureDate = new DateTime(year1, mounth1, day1);
-        var price = Convert.ToDouble(room.Cost) * int.Parse(((departureDate - arrivalDate).Days).ToString());
-        Booking newBook = new Booking(room, client, arrivalDate, departureDate, price);
+        var departureDate = new DateOnly(year1, mounth1, day1);
+        var price = Convert.ToDouble(room.Cost) * int.Parse(((departureDate.Day - arrivalDate.Day)).ToString());
+        Booking newBook = new Booking(room, client, int.Parse(adaltCnt), int.Parse(childeCnt), arrivalDate, departureDate, price);
         Mongo.AddBookingToDB(newBook);
+        bookings.Add(newBook);
+        SearchingForBook();
+    }
+
+    
+
+    private void OpenCurrentBooking(Booking booking)
+    {
+        servise.booking = booking;
+        manager.NavigateTo("booking");
     }
 
     private void GetRoomWithSelectType()
@@ -188,10 +211,17 @@
         .ToList();
     }
 
-    private void Searching()
+    private void SearchingForSelect()
     {
         sortingClients = clients.Where((element) =>
             element.ClientName.ToLower().Contains(nameClient.ToLower()))
+        .ToList();
+    }
+
+    private void SearchingForBook()
+    {
+        sortingBookings = bookings.Where((element) =>
+            element.Client.ClientName.ToLower().Contains(search.ToLower()))
         .ToList();
     }
 
@@ -207,8 +237,29 @@
         background-color: #eeeeee
     }
 
+    .appbar {
+        margin-bottom: 20px;
+    }
+
+    #newBook {
+        margin-left: 250px;
+        margin-top: -1px;
+    }
+
+    #searching {
+        width: 250px;
+        height: 35px;
+        padding-left: 24px;
+    }
+
+
+        #searching ~ i {
+            width: 35px;
+            margin-left: -272px;
+        }
+
+
     .dropdownClients{
-        /*display: none;*/
         overflow-y:scroll; 
         overflow-x:hidden; 
         margin-left: 2.6rem;
@@ -308,7 +359,47 @@
         position: relative;
         transition: color .2s;
         font-size: 2.1rem;
-        top: 5px;
     }
+
+
+    .button {
+        display: inline-block;
+        border-radius: 4px;
+        background-color: #0dcaf0;
+        border: none;
+        color: black;
+        text-align: center;
+        font-size: 16px;
+        padding: 11px;
+        width: 116px;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+    }
+
+        .button span {
+            cursor: pointer;
+            display: inline-block;
+            position: relative;
+            transition: 0.5s;
+        }
+
+            .button span:after {
+                content: '\00bb';
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -30px;
+                transition: 0.5s;
+            }
+
+        .button:hover span {
+            padding-right: 22px;
+        }
+
+            .button:hover span:after {
+                opacity: 1;
+                right: 0;
+            }
 
 </style>
