--- a/YusupovHotel/Pages/ClientsPage.razor
+++ b/YusupovHotel/Pages/ClientsPage.razor
@@ -45,14 +45,14 @@
                 </div>
         </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default btn-success" type="submit">Добавить</button>
+            <button class="btn btn-default btn-success" data-bs-dismiss="modal" type="submit">Добавить</button>
             </div>
                 </EditForm>
         </div>
     </div>
 </div>
 <div  class="appbar"  style="margin: 20px 0 0 10%">
-    <input id="searching" class="sort" type="text" @bind="Search" @bind:event="oninput" @onkeyup="Searching" required="required" placeholder="Поиск">
+        <input id="searching" class="sort" type="text" @bind="search" @bind:event="oninput" @onkeyup="Searching" required="required" placeholder="Поиск">
     <i id="searching" class="fas fa-search prefix grey-text"></i>
     <button id="newClient" class="btn btn-default btn-success" data-bs-toggle="modal" data-bs-target="#modalRegisterForm">
     Добавить нового клиента
@@ -87,7 +87,7 @@
     List<Client> clients = new List<Client>();
     List<Client> sortingClients = new List<Client>();
     Client client = new Client("","","");
-    string Search = "";
+    string search = "";
     bool wasSubmitted;
 
     protected override void OnInitialized()
@@ -106,9 +106,9 @@
     private void Searching()
     {
         sortingClients = clients.Where((element) =>
-            element.ClientName.ToLower().Contains(Search.ToLower())
-            || element.Email.ToLower().Contains(Search.ToLower())
-            || element.PhoneNumber.ToLower().Contains(Search.ToLower()))
+            element.ClientName.ToLower().Contains(search.ToLower())
+            || element.Email.ToLower().Contains(search.ToLower())
+            || element.PhoneNumber.ToLower().Contains(search.ToLower()))
         .ToList();
     }
 
