--- a/YusupovHotel/Pages/RoomsPage.razor
+++ b/YusupovHotel/Pages/RoomsPage.razor
@@ -13,7 +13,7 @@
         <div class="modal-content">
             <div class="modal-header text-center">
                 <h4 class="modal-title w-100 font-weight-bold">Добавление нового номера</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" >
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick=Clear>
                 </button>
             </div>
              <EditForm Model="@roomModel" class="formRegistr" OnValidSubmit="@Submit">
@@ -95,7 +95,7 @@
                     </div>
             </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default btn-success" type="submit" >Добавить</button>
+                        <button class="btn btn-default btn-success" data-bs-dismiss="modal" type="submit">Добавить</button>
             </div>
                 </EditForm>
         </div>
@@ -148,7 +148,7 @@
     private void AddNewRoom()
     {
         rooms.Add(FileSystemService.SaveRoomWithPhotos(fileBytes, roomModel));
-        
+        Clear();
     }
 
     public void Submit()
@@ -165,7 +165,6 @@
 
     private async Task LoadFiles(IFileListEntry[] files)
     {
-        double s = 1.3;
         imgSrc.Clear();
         fileBytes.Clear();
         if (files.Count() == 3)
@@ -186,6 +185,12 @@
         else if (files.Count() > 3) inputFileError = "Можно загрузить только 3 фото";
         else inputFileError = "Нужно загрузить 3 фото";
 
+    }
+
+    private void Clear()
+    {
+        roomModel = new Room();
+        imgSrc.Clear();
     }
 }
 
